--- a/UE/S3/ASE/TP2/rapport/rapport.tex
+++ b/UE/S3/ASE/TP2/rapport/rapport.tex
@@ -302,8 +302,9 @@ struct task_struct *pick_next_task (struct rq *rq,
 
 \newpage
 \section{Completely Fair Scheduling}
-  \paragraph{Q.14} TODO
+  \paragraph{Q.14} Il est implémenté dans le fichier \textbf{kernel/sched/fair.c}
 
+  \paragraph{Q.15} Cet algorithme se base sur les 'red-black tree' (arbre binaire bicolore \ref{rbtree})
 
     \newpage
     \section{Références}
@@ -313,6 +314,11 @@ struct task_struct *pick_next_task (struct rq *rq,
         Modern Operating Systems - Andrew S. Tanenbaum, Herbert Bos (page 149-166)\newline
         \href{https://github.com/concerttttt/books/blob/master/Modern Operating Systems 4th Edition--Andrew Tanenbaum.pdf}
         {\textit{https://github.com/concerttttt/books/}}\newline
+	
+	\bibitem{rbtree}\label{rbtree}
+        Arbre bicolore - Wikipédia\newline
+        \href{https://fr.wikipedia.org/wiki/Arbre_bicolore
+        {\textit{https://fr.wikipedia.org/wiki/Arbre_bicolore}}\newline
 	
         \bibitem{inlinefunc}\label{inlinefunc}
         Inlining in Linux - Linux Kernel Documentation\newline
