--- a/UE/S3/ASE/TP2/rapport/rapport.tex
+++ b/UE/S3/ASE/TP2/rapport/rapport.tex
@@ -317,7 +317,7 @@ struct task_struct *pick_next_task (struct rq *rq,
 	
 	\bibitem{rbtree}\label{rbtree}
         Arbre bicolore - Wikipédia\newline
-        \href{https://fr.wikipedia.org/wiki/Arbre_bicolore
+        \href{https://fr.wikipedia.org/wiki/Arbre_bicolore}
         {\textit{https://fr.wikipedia.org/wiki/Arbre_bicolore}}\newline
 	
         \bibitem{inlinefunc}\label{inlinefunc}
