--- a/UE/S3/ASE/TP2/rapport/rapport.tex
+++ b/UE/S3/ASE/TP2/rapport/rapport.tex
@@ -105,36 +105,37 @@
     \section{Fonctionnement de l'ordonnanceur}
         \paragraph{Q.1}
         Nos ordinateurs de bureau dispose généralement d'un seul processeur (avec 1, 2, 4 ou 8 coeurs d'execution).
+        Le processeur est le seul point d'execution possible pour les processus.
         
-        Lorsque plusieurs processus s'execute sur la machine, il faut donc qu'il
-        y ait un méchanisme de partage du processeur : il est le seul point d'execution pour les processus.
+        Lorsque plusieurs processus s'execute sur le même processeur, il faut donc qu'il y ait un méchanisme de partage du processeur.
     
         C'est la fonction principale de l'ordonnanceur.
-        Il choisit dans quel ordre plusieurs processus peuvent être executé sur un même processeur.
-        
-        \textbf{N.B} : l'ordonnanceur est lui même un processus.
-                
+        Il choisit dans quel ordre, et pendant combien de temps les processus peuvent être executé sur le processeur.
+                        
         L'execution de l'ordonnanceur peut avoir lieu pour répondre aux problèmes suivants:
         
-        - Lorsqu'un processus se clone (\textit{fork()}) : lequel du père ou du fils doit avoir la priorité d'éxecution?
-        
-        - Lorsque le processus courant s'arrête : quel processus doit prendre la main ensuite
-        
-        - Lorsqu'un processus bloque sur une entrée/sortie, ou qu'il est en attente : doit t'il continuer de bloquer le processeur alors qu'il ne travaille pas?
-        
-        - Lorsqu'une entrée/sortie est interrompu : peut être que le processus a fini son job, ou bien c'est un signal indiquant qu'un processus précèdemment en attente entrée/sortie peut maintenant effectué son travail.
+        \begin{itemize}
+            \item Lorsqu'un processus se clone (appel $fork()$) : lequel du père ou du fils a la priorité d'éxecution?
+            \item Lorsque le processus courant s'arrête : quel processus doit prendre la main ensuite
+            \item Lorsqu'un processus bloque sur une entrée/sortie, ou qu'il est en attente :
+            doit t'il continuer de bloquer le processeur alors qu'il ne travaille pas?
+            \item Lorsqu'une entrée/sortie est interrompu : peut être que le processus a fini son job,
+            ou bien c'est un signal indiquant qu'un processus précèdemment en attente entrée/sortie
+            peut maintenant effectué son travail.
+        \end{itemize}
         
         
         Aussi, on distingue 2 grandes politiques décidant de l'execution de l'ordonnanceur.
+        \begin{itemize}
+            \item \textbf{préemptif} : l'ordonnanceur peut stopper l'éxecution d'un processus,
+            et donner la main sur le CPU à un autre processus.
+            \item \textbf{non-préemptif} : l'ordonnanceur ne tourne que si le processus utilisateur
+            s'arrête, bloque, ou demande explicitement à changer de processus.
+            Si le processus ne rends pas la main pendant 100 ans, l'ordonanneur attendra impassiblement pendant 100 ans.
 
-        - non-pre-emptive : l'ordonnanceur ne tourne que si le processus utilisateur s'arrête, bloque, ou demande explicitement à changer de processus.
-        Si le processus ne rends pas la main pendant 100 ans, l'ordonanneur attendra impassiblement pendant 100 ans.
+        \end{itemize}
 
-        \label{preempt}
-        - pre-emptive : Chaque processus à un temps d'execution fixe.
-        L'ordonnanceur est executé à intervalle régulier, et détermine le prochain prochain processus qui doit être executé sur le prochaine 'créneau'.
-
-
+        
         \paragraph{Q.2}
         La fonction \textit{sched\_yield} passe la main sur le processeur d'un processus à un autre
         (ou d'un processus vers lui même s'il reste le plus 'prioritaire').
@@ -236,16 +237,23 @@ schedule();
 \end{lstlisting}
         
 \paragraph{Q.6}
-La pré-emption est un mecanisme d'ordonnancement qui consiste à donner un temps maximal d'execution à un processus,
-au dela duquelle l'algorithme d'ordonnancement sera relancé (c.f \ref{preempt} )
+La préemption est un mecanisme d'ordonnancement.
 
-Si la préemption est active lors de l'execution de l'ordonnanceur, ...
- 
+Il donne à chaque processus à un temps d'execution maximal. \label{preempt}
+L'ordonnanceur est executé à intervalle régulier, et détermine le prochain prochain
+processus qui doit être executé sur le prochain 'créneau'.
+
+La préemption est desactivé dans l'ordonnanceur, car le code de l'ordonnanceur à la priorité d'execution sur le CPU.
+Il ne doit pas être interrompu dans son execution.
+
+De plus, la desactivation de la préemption permet d'éviter de compatibiliser
+le temps passé par le processus dans le code de l'ordonnanceur.
+
  \paragraph{Q.7}
  La 'run-queue' est une structure de données (de type tableau). Elle liste la priorité d'execution des processus.
  A chaque processeur est associé une run-queue.
  
- La run-queue est verouillé au début de la fonction \textiŧ{schedule} (alors que le processus 'prev' vient de finir son créneau d'execution)
+ La run-queue est verouillé au début de la fonction \textit{schedule} (alors que le processus 'prev' vient de finir son créneau d'execution)
  
  Ensuite, le prochain processus devant être executé est élu par l'ordonnanceur : c'est le processus 'next'
  
@@ -265,8 +273,8 @@ struct task_struct *pick_next_task (struct rq *rq,
  \paragraph{Q.9} TODO
  
  \paragraph{Q.10}
- La fonction \textit{context_switch} se trouve à la ligne 2862 du fichier 'core.c'.
- Elle est declaré en '__always_inline', ce qui signifie que le code de cette fonction doit être duppliqué par le compilateur,
+ La fonction $context\_switch$ se trouve à la ligne 2862 du fichier 'core.c'.
+ Elle est declaré en $\_\_always\_inline$, ce qui signifie que le code de cette fonction doit être duppliqué par le compilateur,
  et ré-insérer dans le binaire executable à chaque appel vers cette fonction (voir \ref{inlinefunc} )
  
  Cette fonction rétablie l'état du processus sur le processeur, état dans lequel il avait été stoppé lors de son dernier créneau d'execution (ou dans un nouvel état si c'est un nouveau processus).
@@ -276,7 +284,7 @@ struct task_struct *pick_next_task (struct rq *rq,
  \paragraph{Q.12}
  L'usage de pointeur de fonctions permet de relier l'ordonnanceur à des algorithmes d'ordonnancement.
  
- La structure 'struct sched_class' définit toutes les fonctions qu'un algorithme d'ordonnancement doit implémenter.
+ La structure $struct sched\_class$ définit toutes les fonctions qu'un algorithme d'ordonnancement doit implémenter.
  
  Il suffit d'initialiser cette structure avec des implémentations des fonctions de l'algorithme, et l'ordonnanceur l'executera
 
@@ -301,24 +309,56 @@ struct task_struct *pick_next_task (struct rq *rq,
 
 
 \newpage
-\section{Completely Fair Scheduling}
+\section{Completely Fair Scheduling (CFS)}
   \paragraph{Q.14} Il est implémenté dans le fichier \textbf{kernel/sched/fair.c}
 
   \paragraph{Q.15} Cet algorithme se base sur les 'red-black tree' (arbre binaire bicolore \ref{rbtree})
+
+  \paragraph{Q.16} Cette algorithme est décrit avec détail dans l'ouvrage \ref{modernos} , page 749.
+  
+  L'algorithme CFS stocke les processus dans une file de priorité ayant la structure d'un red-black tree (appelé 'run-queue').
+  
+  Ils sont positionnés dans l'arbre en fonction du temps qu'ils ont passé à s'éxecuter sur le CPU (appelé 'vruntime', précision en nanosecondes).
+  
+  Les sommets avec le plus petit 'vruntime' sont placés 'à gauche' dans l'arbre, et ceux avec plus de 'vruntime', 'à droite'.
+  
+  \textbf{étape 1} - Le CFS sort de l'arbre le processus qui a le plus petit 'vruntime' (celui le plus 'à gauche' dans l'arbre).
+  Ce processus est mis en éxecution sur le CPU.
+
+  \textbf{étape 2} Périodiquement, le CFS incrémente le 'vruntime' du processus en cours, en fonction du temps
+  qu'il a déjà passé à s'éxecuter.
+  
+  \textbf{étape 3.1} Si le 'vruntime' du processus en cours est plus petit que le minimum de l'arbre, son execution continu.
+  
+  \textbf{étape 3.2} Sinon, il est inséré dans l'arbre à l'endroit approrié, puis retour à \textbf{l'étape 1}.
+  
+  Pour prendre en compte la priorité des processus, le CFS incrémente plus ou moins
+  vite le 'vruntime' des processus (au cours de \textbf{l'étape 1})
+  
+  Pour les processus avec une priorité plus basse, le temps s'écoule plus vite.
+  Cela permet de passer plus rapidement à \textbf{l'étape 3.2} pour ces processus (c'est à dire de stopper son éxecution, et passer au processus suivant).
+  
+  L'insertion d'un processus dans l'arbre se fait en $O(log(n))$, avec 'n' le nombre de processus actif dans le système.
+  Dans les systèmes actuelles, on ne dépasse généralement pas 100 processus actifs ($log(100) \simeq 6.7$).
+  
+  Aussi, cette file d'éxecution en 'red-black tree' ne contient que les processus pouvant être éxecuté.
+  
+  Les processus bloquant, en attente d'un signal (type I/O), sont placés dans une file d'attente concurrante ('wait-queue').
+  Lorsqu'un évènement les débloque et qu'ils peuvent être éxecuté, ils sont alors placés dans la 'run-queue'.
 
     \newpage
     \section{Références}
     \begin{thebibliography}{}
 
         \bibitem{modernos}\label{modernos}
-        Modern Operating Systems - Andrew S. Tanenbaum, Herbert Bos (page 149-166)\newline
+        Modern Operating Systems - Andrew S. Tanenbaum, Herbert Bos (page 149-166 et 749)\newline
         \href{https://github.com/concerttttt/books/blob/master/Modern Operating Systems 4th Edition--Andrew Tanenbaum.pdf}
         {\textit{https://github.com/concerttttt/books/}}\newline
 	
 	\bibitem{rbtree}\label{rbtree}
         Arbre bicolore - Wikipédia\newline
-        \href{https://fr.wikipedia.org/wiki/Arbre_bicolore}
-        {\textit{https://fr.wikipedia.org/wiki/Arbre_bicolore}}\newline
+        \href{https://fr.wikipedia.org/wiki/Arbre\_bicolore}
+        {\textit{https://fr.wikipedia.org/wiki/Arbre\_bicolore}}\newline
 	
         \bibitem{inlinefunc}\label{inlinefunc}
         Inlining in Linux - Linux Kernel Documentation\newline
